# summarizer

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml  test.yml
summarizer/: cli.py  config.py  providers.py
tests/: test_config.py
