[project]
name = "summarizer"
version = "0.1.0"
description = "CLI tool to summarize text and articles at URLs"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "langchain-anthropic>=0.3.0",
    "langchain-google-genai>=2.0.0",
    "trafilatura>=2.0.0",
    "questionary>=2.0.0",
    "langchain-openai>=0.3.0",
    "langchain-ollama>=0.3.0",
    "rich>=13.0.0",
]

[project.scripts]
summarizer = "summarizer.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.17",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["summarizer"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
