[project]
name = "summarizer"
dynamic = ["version"]
description = "CLI tool to summarize text and articles at URLs"
requires-python = ">=3.11"
dependencies = [
    "langchain>=0.3.0",
    "trafilatura>=2.0.0",
    "questionary>=2.0.0",
    "rich>=13.0.0",
    "pip",
]

[project.scripts]
summarizer = "summarizer.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.15.17",
]

[tool.hatch.version]
source = "vcs"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["summarizer"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
ignore = []

[tool.ruff.format]
quote-style = "double"
